--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AA0D4DDD-F307-47A1-8D40-BB0CCEA2EC05}</ProjectGuid>
+    <ProjectGuid>{64A7CFF8-9CB8-4046-9D4D-46BB529AB24C}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>LightEditor</RootNamespace>
-    <AssemblyName>LightEditor</AssemblyName>
+    <RootNamespace>LightController</RootNamespace>
+    <AssemblyName>LightController</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,15 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject>LightEditor.Program</StartupObject>
-  </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationIcon>bitbug_favicon.ico</ApplicationIcon>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="IrisSkin4">
-      <HintPath>..\..\..\..\Desktop\IrisSkin4\IrisSkin4.dll</HintPath>
+      <HintPath>..\..\..\..\Desktop\skins\IrisSkin4\IrisSkin4.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -53,12 +47,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataWrapper.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="LightsAstForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="LightsAstForm.designer.cs">
+      <DependentUpon>LightsAstForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LightsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LightsForm.designer.cs">
+      <DependentUpon>LightsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -68,12 +67,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WaySetForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="WaySetForm.designer.cs">
-      <DependentUpon>WaySetForm.cs</DependentUpon>
-    </Compile>
+    <EmbeddedResource Include="LightsAstForm.resx">
+      <DependentUpon>LightsAstForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LightsForm.resx">
+      <DependentUpon>LightsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -86,9 +85,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="WaySetForm.resx">
-      <DependentUpon>WaySetForm.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -100,7 +96,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="bitbug_favicon.ico" />
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
