--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -35,6 +35,7 @@
     <Reference Include="IrisSkin4">
       <HintPath>..\..\..\..\Desktop\skins\IrisSkin4\IrisSkin4.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ast\LightAst.cs" />
     <Compile Include="LightsAstForm.cs">
       <SubType>Form</SubType>
     </Compile>
