--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -146,6 +146,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Source\data.db3" />
+    <None Include="Source\global.ini" />
+    <None Include="Source\System.Data.SQLite.dll.config" />
+    <None Include="Source\Vista2_color7.ssk" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
@@ -156,6 +160,13 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Source\IrisSkin4.dll" />
+    <Content Include="Source\System.Data.SQLite.dll" />
+    <Content Include="Source\System.Data.SQLite.EF6.dll" />
+    <Content Include="Source\System.Data.SQLite.Linq.dll" />
+    <Content Include="Source\System.Data.SQLite.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.110.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.110.0\build\net40\System.Data.SQLite.Core.targets')" />
