--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -85,8 +85,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ast\DataBaseHelper.cs" />
+    <Compile Include="Ast\DBWrapper.cs" />
     <Compile Include="Ast\LightAst.cs" />
-    <Compile Include="Ast\DataWrapper.cs" />
+    <Compile Include="Ast\TongdaoWrapper.cs" />
     <Compile Include="Ast\MD5Ast.cs" />
     <Compile Include="Ast\NewForm.cs">
       <SubType>Form</SubType>
@@ -100,6 +101,9 @@
     <Compile Include="Ast\LightsAstForm.designer.cs">
       <DependentUpon>LightsAstForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Entity\DB_Light.cs" />
+    <Compile Include="Entity\DB_StepCount.cs" />
+    <Compile Include="Entity\DB_Value.cs" />
     <Compile Include="LightsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -168,6 +172,7 @@
     <Content Include="Source\System.Data.SQLite.Linq.dll" />
     <Content Include="Source\System.Data.SQLite.xml" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.110.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.110.0\build\net40\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
