--- a/LightController/packages.config
+++ b/LightController/packages.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.1.1" targetFramework="net40" />
+  <package id="Castle.Core" version="1.1.0" targetFramework="net40" />
+  <package id="Castle.DynamicProxy" version="2.1.0" targetFramework="net40" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net40" />
+  <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net40" />
+  <package id="log4net" version="1.2.10" targetFramework="net40" />
+  <package id="NHibernate" version="4.1.2.4000" targetFramework="net40" />
+  <package id="NUnit" version="2.7.0" targetFramework="net40" />
   <package id="System.Data.SQLite" version="1.0.110.0" targetFramework="net40" />
   <package id="System.Data.SQLite.Core" version="1.0.110.0" targetFramework="net40" />
   <package id="System.Data.SQLite.EF6" version="1.0.110.0" targetFramework="net40" />
