这次按命名规范，重写了各种辅助类的名字， 1.Helper：放置各种带方法的辅助类，可通过这些类直接操作某些通用对象 2.Wrapper：包装类，可能会一直保存某些值，直到程序终结 3.Ast：中间过渡的类，做临时变量

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -121,18 +121,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Ast\LightData.cs" />
-    <Compile Include="Ast\SQLiteHelper.cs" />
+    <Compile Include="Ast\LightWrapper.cs" />
+    <Compile Include="Common\SQLiteHelper.cs" />
     <Compile Include="Ast\DBWrapper.cs" />
     <Compile Include="Ast\LightAst.cs" />
-    <Compile Include="Ast\StepAstList.cs" />
-    <Compile Include="Ast\StepAst.cs" />
+    <Compile Include="Ast\LightStepWrapper.cs" />
+    <Compile Include="Ast\StepWrapper.cs" />
     <Compile Include="DAO\ValueDAO.cs" />
     <Compile Include="DAO\StepCountDAO.cs" />
     <Compile Include="DAO\LightDAO.cs" />
     <Compile Include="DAO\BaseDAO.cs" />
     <Compile Include="Ast\TongdaoWrapper.cs" />
-    <Compile Include="Ast\MD5Ast.cs" />
+    <Compile Include="Common\MD5Helper.cs" />
     <Compile Include="Form\NewForm.cs">
       <SubType>Form</SubType>
     </Compile>
