--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -133,6 +133,12 @@
     <Compile Include="DAO\BaseDAO.cs" />
     <Compile Include="Ast\TongdaoWrapper.cs" />
     <Compile Include="Common\MD5Helper.cs" />
+    <Compile Include="MyForm\GlobalSetForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\GlobalSetForm.Designer.cs">
+      <DependentUpon>GlobalSetForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\NewForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -162,8 +168,17 @@
     <Compile Include="MyForm\MainForm.designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\QDTestForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\QDTestForm.Designer.cs">
+      <DependentUpon>QDTestForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="MyForm\GlobalSetForm.resx">
+      <DependentUpon>GlobalSetForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MyForm\NewForm.resx">
       <DependentUpon>NewForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -175,6 +190,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\QDTestForm.resx">
+      <DependentUpon>QDTestForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
