一.OpenForm中写好了处理删除节点的操作 1.删除选中目录 2.bool ifJustDelete = false; 3.treeView_afterClick(){ ifJustDelete = true;}

--- a/NHibernateSQLiteDemo/NHibernateSQLiteDemo.csproj
+++ b/NHibernateSQLiteDemo/NHibernateSQLiteDemo.csproj
@@ -49,6 +49,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>3A028403D14FC6F2EB300315D17A974D3EEE760A</ManifestCertificateThumbprint>
