--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -84,6 +84,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net40\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="FTD2XX_NET, Version=1.0.14.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FTD2XX.Net.1.0.14\lib\FTD2XX_NET.dll</HintPath>
+    </Reference>
     <Reference Include="Iesi.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>..\packages\Iesi.Collections.4.0.0.4000\lib\net40\Iesi.Collections.dll</HintPath>
     </Reference>
@@ -186,6 +189,19 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\ChanelData.cs" />
+    <Compile Include="Tools\Conn.cs" />
+    <Compile Include="Tools\Constant.cs" />
+    <Compile Include="Tools\DMX512Play.cs" />
+    <Compile Include="Tools\DMXTools.cs" />
+    <Compile Include="Tools\DMX_C_Data.cs" />
+    <Compile Include="Tools\DMX_C_File.cs" />
+    <Compile Include="Tools\DMX_M_Data.cs" />
+    <Compile Include="Tools\DMX_M_File.cs" />
+    <Compile Include="Tools\FormatTools.cs" />
+    <Compile Include="Tools\SenceData.cs" />
+    <Compile Include="Tools\SerialPortToolsTest.cs" />
+    <Compile Include="Tools\SockTools.cs" />
     <EmbeddedResource Include="MyForm\GlobalSetForm.resx">
       <DependentUpon>GlobalSetForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -257,6 +273,8 @@
     <EmbeddedResource Include="Mapping\DB_Value.hbm.xml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <Content Include="FTD2XX_NET.XML" />
+    <Content Include="ReadMe.txt" />
     <Content Include="Source\IrisSkin4.dll" />
     <Content Include="Source\System.Data.SQLite.dll" />
     <Content Include="Source\System.Data.SQLite.EF6.dll" />
