--- a/LightController/packages.config
+++ b/LightController/packages.config
@@ -4,6 +4,7 @@
   <package id="Castle.Core" version="1.1.0" targetFramework="net40" />
   <package id="Castle.DynamicProxy" version="2.1.0" targetFramework="net40" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net40" />
+  <package id="FTD2XX.Net" version="1.0.14" targetFramework="net40" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net40" />
   <package id="log4net" version="1.2.10" targetFramework="net40" />
   <package id="NHibernate" version="4.1.2.4000" targetFramework="net40" />
