1.修改一个创建工程时的小bug：路径名必须合法; 2.mainForm的autoSize设为true; 3.去掉LightEditor的安全签名

--- a/LightEditor/LightEditor.csproj
+++ b/LightEditor/LightEditor.csproj
@@ -61,10 +61,16 @@
     <ManifestKeyFile>LightEditor_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>true</GenerateManifests>
+    <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>LocalIntranet</TargetZone>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="IrisSkin4">
@@ -114,6 +120,7 @@
       <DependentUpon>WaySetForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="LightEditor_TemporaryKey.pfx" />
+    <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
