添加通信功能模块测试类

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -203,6 +203,7 @@
     <Compile Include="Tools\SenceData.cs" />
     <Compile Include="Tools\SerialPortToolsTest.cs" />
     <Compile Include="Tools\SockTools.cs" />
+    <Compile Include="Tools\Test.cs" />
     <EmbeddedResource Include="MyForm\GlobalSetForm.resx">
       <DependentUpon>GlobalSetForm.cs</DependentUpon>
     </EmbeddedResource>
