1.添加UDP广播搜索设备 2.添加接受UDP广播信息，通过信息中的ip地址以及端口号定向建立TCP连接，连接设备 3.添加网络通信模块，新增put命令向设备下发文件数据 4.添加定向TCP连接测试模块

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -191,7 +191,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\ChanelData.cs" />
     <Compile Include="Tools\Conn.cs" />
+    <Compile Include="Tools\ConnectTools.cs" />
     <Compile Include="Tools\Constant.cs" />
+    <Compile Include="Tools\CRCTools.cs" />
     <Compile Include="Tools\DMX512Player.cs" />
     <Compile Include="Tools\DMXConfigData.cs" />
     <Compile Include="Tools\DMXTools.cs" />
