1.修改lightEditor：预设通道值列表文件改名；tdlabel调到与vscrollbar同高；mouseHover-->mouseEnter 2.添加了默认MaterialSet.ini（空文件，但已指定字符编码）； 3.保存素材完成。

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -275,6 +275,9 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="App.config" />
+    <Content Include="MaterialSet.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
