1.合并InsertStep和AddStep 2.+MaterialIndexAst类，及getSameTDIndexList方法 3.初步写出InsertOrCoverMaterial方法；

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -136,6 +136,7 @@
   <ItemGroup>
     <Compile Include="Ast\LightWrapper.cs" />
     <Compile Include="Ast\MaterialAst.cs" />
+    <Compile Include="Ast\MaterialIndexAst.cs" />
     <Compile Include="Common\DBGetter.cs" />
     <Compile Include="Common\IniFileAst.cs" />
     <Compile Include="Common\MathAst.cs" />
