1.修改部分参数名称 2.修改音频触发模式

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -243,7 +243,7 @@
     <Compile Include="Tools\ITimeOutFuntion.cs" />
     <Compile Include="Tools\PlayTools.cs" />
     <Compile Include="Tools\ReceiveCallBack.cs" />
-    <Compile Include="Tools\SenceData.cs" />
+    <Compile Include="Tools\SceneData.cs" />
     <Compile Include="Tools\SerialPortToolsTest.cs" />
     <Compile Include="Tools\SockTools.cs" />
     <Compile Include="Tools\Test.cs" />
