--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -159,6 +159,12 @@
     <Compile Include="MyForm\GlobalSetForm.Designer.cs">
       <DependentUpon>GlobalSetForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\HardwareSetForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\HardwareSetForm.Designer.cs">
+      <DependentUpon>HardwareSetForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\MaterialForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -257,6 +263,9 @@
     <EmbeddedResource Include="MyForm\GlobalSetForm.resx">
       <DependentUpon>GlobalSetForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\HardwareSetForm.resx">
+      <DependentUpon>HardwareSetForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MyForm\MaterialForm.resx">
       <DependentUpon>MaterialForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -304,6 +313,9 @@
     <Content Include="MaterialSet.ini">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="HardwareSet.ini">
+      <Generator>ResXFileCodeGenerator</Generator>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
