--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -347,7 +347,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="Source\global.ini" />
+    <Content Include="global.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="Source\MacOS.ssk" />
     <None Include="Source\Vista2_color7.ssk" />
   </ItemGroup>
