修正了许多Bug：1.可以自定义通道，而非一定要系统设定最大值！2.删除或修改了初始通道地址后，原先设定的步数将会删除。3.+双击打开工程及双击打开灯具初始地址修改功能。

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -171,6 +171,12 @@
     <Compile Include="MyForm\HardwareSetForm.Designer.cs">
       <DependentUpon>HardwareSetForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\LightsEditForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\LightsEditForm.Designer.cs">
+      <DependentUpon>LightsEditForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\MaterialForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -281,6 +287,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\HardwareSetForm.resx">
       <DependentUpon>HardwareSetForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\LightsEditForm.resx">
+      <DependentUpon>LightsEditForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\MaterialForm.resx">
       <DependentUpon>MaterialForm.cs</DependentUpon>
