--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -261,9 +261,18 @@
     <Compile Include="Tools\ConnectTools.cs" />
     <Compile Include="Tools\Constant.cs" />
     <Compile Include="Tools\CRCTools.cs" />
+    <Compile Include="Tools\CSJ\ICSJFile.cs" />
+    <Compile Include="Tools\CSJ\IDmxDataConvert.cs" />
+    <Compile Include="Tools\CSJ\IMPL\ChannelData.cs" />
+    <Compile Include="Tools\CSJ\IMPL\CombineScene.cs" />
+    <Compile Include="Tools\CSJ\IMPL\CSJ_C.cs" />
+    <Compile Include="Tools\CSJ\IMPL\CSJ_Config.cs" />
+    <Compile Include="Tools\CSJ\IMPL\CSJ_M.cs" />
+    <Compile Include="Tools\CSJ\IMPL\DmxDataConvert.cs" />
+    <Compile Include="Tools\CSJ\IMPL\LightInfo.cs" />
     <Compile Include="Tools\DataTools.cs" />
-    <Compile Include="Tools\DMX512Player.cs" />
     <Compile Include="Tools\DMXConfigData.cs" />
+    <Compile Include="Tools\DMXDataConvert.cs" />
     <Compile Include="Tools\DMXHardware.cs" />
     <Compile Include="Tools\DMXTools.cs" />
     <Compile Include="Tools\DMX_C_Data.cs" />
@@ -271,11 +280,9 @@
     <Compile Include="Tools\DMX_M_Data.cs" />
     <Compile Include="Tools\DMX_M_File.cs" />
     <Compile Include="Tools\FormatTools.cs" />
-    <Compile Include="Tools\ITimeOutFuntion.cs" />
     <Compile Include="Tools\PlayTools.cs" />
     <Compile Include="Tools\ReceiveCallBack.cs" />
     <Compile Include="Tools\SceneData.cs" />
-    <Compile Include="Tools\SerialPortToolsTest.cs" />
     <Compile Include="Tools\SerialPortTools.cs" />
     <Compile Include="Tools\SockTools.cs" />
     <Compile Include="Tools\Test.cs" />
